Removed java 9 functions